# LoRaTemperature

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-06-29-qt-temperature-monitor.md
docs/superpowers/specs/: 2026-06-29-qt-temperature-monitor-design.md
src/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  ChartManager.cpp  ChartManager.h  CsvWriter.cpp  CsvWriter.h  MainWindow.cpp  MainWindow.h  ModbusWorker.cpp  ModbusWorker.h  Sample.h  main.cpp
tests/: CMakeLists.txt  tst_appconfig.cpp  tst_csvwriter.cpp  tst_sample.cpp
